commands are now components that are autowired + configured by spring boot